refactor: migrate experiment code to Kotlin